// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements ChannelItemElement given bindings field of type ChannelBindingsElement should refract to semantic ApiDOM tree 1`] = `
(ChannelItemElement
  (MemberElement
    (StringElement)
    (ChannelBindingsElement)))
`;

exports[`refractor elements ChannelItemElement given bindings field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ChannelItemElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ChannelItemElement should refract to semantic ApiDOM tree 1`] = `
(ChannelItemElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)
      (StringElement)))
  (MemberElement
    (StringElement)
    (OperationElement))
  (MemberElement
    (StringElement)
    (OperationElement))
  (MemberElement
    (StringElement)
    (ParametersElement)))
`;
